--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -38,10 +38,14 @@
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
@@ -60,6 +64,8 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
@@ -96,6 +102,7 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
   <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net472" />
