spojeny watchdog mail beta 1

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -474,7 +474,7 @@
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
     <Compile Include="Data\External\DataSets\ApiResonseStatus.cs" />
-    <Compile Include="Data\External\DataSets\Dataset.WatchdogProcessor.cs" />
+    <Compile Include="Data\External\DataSets\DataSet.WatchdogProcessor.cs" />
     <Compile Include="Data\External\DataSets\RuntimeClassBuilder.cs" />
     <Compile Include="Data\External\DataSets\DataSearchResult.cs" />
     <Compile Include="Data\External\DataSets\DataSet.Api.cs" />
