--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -393,8 +393,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApiV1Controller.NasiPolitici.cs" />
     <Compile Include="Controllers\ApiV1Controller.Modal.cs" />
-    <Compile Include="Controllers\ApiV2\ApiV2Osoby.cs" />
-    <Compile Include="Controllers\ApiV2\ApiV2VZ.cs" />
+    <Compile Include="Controllers\ApiV2\ApiV2DatasetyControler.cs" />
+    <Compile Include="Controllers\ApiV2\ApiV2OsobyController.cs" />
+    <Compile Include="Controllers\ApiV2\ApiV2VZController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2SmlouvyController.cs" />
     <Compile Include="Controllers\DataController.CreateWizards.cs" />
     <Compile Include="Controllers\DotaceController.cs" />
