--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -713,8 +713,10 @@
     <Compile Include="Watchdogs\Email.cs" />
     <Compile Include="Watchdogs\IRenderContent.cs" />
     <Compile Include="Watchdogs\IWatchdogProcessor.cs" />
+    <Compile Include="Watchdogs\RenderedContent.cs" />
     <Compile Include="Watchdogs\Results.cs" />
     <Compile Include="Watchdogs\SingleEmailPerUserProcessor.cs" />
+    <Compile Include="Watchdogs\SingleEmailPerUserProcessor.Template.cs" />
     <Compile Include="Watchdogs\Tools.cs" />
     <Compile Include="xsd\dump_index.cs">
       <DependentUpon>dump_index.xsd</DependentUpon>
