Setting swagger endpoint

--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1069,6 +1069,7 @@
     <Content Include="Content\bootstrap\badges.less" />
     <Content Include="Content\bootstrap\alerts.less" />
     <Content Include="App_Code\Infographic.cshtml" />
+    <Content Include="apiv2doc.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
