--- a/Util/packages.config
+++ b/Util/packages.config
@@ -2,18 +2,21 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
-  <package id="CouchbaseNetClient" version="2.7.15" targetFramework="net472" />
+  <package id="CouchbaseNetClient" version="2.7.16" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.20" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.22" targetFramework="net472" />
+  <package id="jnm2.ReferenceAssemblies.net35" version="1.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="NEST" version="7.5.1" targetFramework="net472" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="NEST" version="7.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
-  <package id="Scriban" version="2.1.1" targetFramework="net472" />
+  <package id="Scriban" version="2.1.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
