--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -151,6 +151,16 @@
   <runtime>
       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
         <dependentAssembly>
+          <assemblyIdentity name="System.Web.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+          <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        </dependentAssembly>
+        <dependentAssembly>
+          <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+          <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        </dependentAssembly>
+
+  
+        <dependentAssembly>
           <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
           <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
         </dependentAssembly>
@@ -358,7 +368,7 @@
         </dependentAssembly>
         <dependentAssembly>
           <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-          <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+          <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
         </dependentAssembly>
         <dependentAssembly>
           <assemblyIdentity name="OpenTracing" publicKeyToken="61503406977abdaf" culture="neutral" />
@@ -377,7 +387,9 @@
           <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
           <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
         </dependentAssembly>
-      </assemblyBinding>-->
+      </assemblyBinding>
+            -->
+
 
       </assemblyBinding>
 
