--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.9.4" targetFramework="net472" />
-  <package id="CsvHelper" version="12.2.2" targetFramework="net472" />
+  <package id="Autofac" version="5.1.2" targetFramework="net472" />
+  <package id="CsvHelper" version="15.0.2" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
@@ -9,35 +9,41 @@
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
-  <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
+  <package id="EmguCV" version="3.1.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
-  <package id="Enums.NET" version="3.0.2" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.20" targetFramework="net472" />
+  <package id="Enums.NET" version="3.0.3" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.22" targetFramework="net472" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
+  <package id="jnm2.ReferenceAssemblies.net35" version="1.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MimeSharp" version="1.0.0" targetFramework="net472" />
   <package id="Neo4j.Driver" version="1.7.2" targetFramework="net472" />
-  <package id="NEST" version="7.5.1" targetFramework="net472" />
+  <package id="NEST" version="7.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
   <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net472" />
   <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net472" />
   <package id="Nito.Disposables" version="2.0.1" targetFramework="net472" />
   <package id="NitoAsyncEx.Context.StrongName" version="1.1.0" targetFramework="net472" />
   <package id="ObjectsComparer" version="1.4.1" targetFramework="net472" />
+  <package id="OpenTK" version="1.1.2225.0" targetFramework="net472" />
+  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
-  <package id="Scriban" version="2.1.1" targetFramework="net472" />
+  <package id="Scriban" version="2.1.2" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
