--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -1,32 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="bootstrap" version="4.4.1" targetFramework="net472" />
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
-  <package id="CsvHelper" version="12.2.2" targetFramework="net472" />
+  <package id="CsvHelper" version="15.0.2" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.5" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="7.5.1" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.6.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.20" targetFramework="net472" />
-  <package id="IPNetwork2" version="2.4.0.163" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.22" targetFramework="net472" />
+  <package id="IPNetwork2" version="2.5.189" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights" version="2.10.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.13.1" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.10.0" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.10.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.13.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
@@ -37,17 +37,20 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net472" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
@@ -60,10 +63,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.24.0" targetFramework="net472" />
-  <package id="NEST" version="7.5.1" targetFramework="net472" />
+  <package id="NEST" version="7.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
@@ -104,7 +108,7 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="ZeroFormatter" version="1.6.4" targetFramework="net472" />
   <package id="ZeroFormatter.Interfaces" version="1.6.4" targetFramework="net472" />
