--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -75,6 +75,9 @@
     <Reference Include="Elastic.Apm">
       <HintPath>..\3rd\Elastic.Apm.AspNetFullFramework.bin\Elastic.Apm.dll</HintPath>
     </Reference>
+    <Reference Include="Elastic.Apm.AspNetFullFramework">
+      <HintPath>..\3rd\Elastic.Apm.AspNetFullFramework.bin\Elastic.Apm.AspNetFullFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Elasticsearch.Net, Version=7.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
       <HintPath>..\packages\Elasticsearch.Net.7.6.1\lib\net461\Elasticsearch.Net.dll</HintPath>
     </Reference>
@@ -227,6 +230,9 @@
     </Reference>
     <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.GLControl.1.1.2225.0\lib\net20\OpenTK.GLControl.dll</HintPath>
+    </Reference>
+    <Reference Include="Postal">
+      <HintPath>..\3rd\binaries\Postal.dll</HintPath>
     </Reference>
     <Reference Include="RazorEngine, Version=3.10.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.10.0\lib\net45\RazorEngine.dll</HintPath>
@@ -843,10 +849,6 @@
     <ProjectReference Include="..\3rd\DotNet.Highcharts\DotNet.Highcharts.csproj">
       <Project>{6fe2ea1e-85e3-4969-be6c-c08c9ba9029a}</Project>
       <Name>DotNet.Highcharts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\3rd\Postal.MVC5 fork\Source\Postal.AspNetCore\Postal.Mvc5.4.6.csproj">
-      <Project>{ca00867c-d9bc-42d9-b04a-bf1957324882}</Project>
-      <Name>Postal.Mvc5.4.6</Name>
     </ProjectReference>
     <ProjectReference Include="..\3rd\ZabbixApi\ZabbixApi.csproj">
       <Project>{2834dafd-eade-4076-9d80-0827e185efe1}</Project>
