--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -192,6 +192,9 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Postal">
+      <HintPath>..\3rd\binaries\Postal.dll</HintPath>
+    </Reference>
     <Reference Include="RazorEngine, Version=3.10.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
       <HintPath>..\packages\RazorEngine.3.10.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
@@ -1536,10 +1539,6 @@
     <ProjectReference Include="..\3rd\DotNet.Highcharts\DotNet.Highcharts.csproj">
       <Project>{6fe2ea1e-85e3-4969-be6c-c08c9ba9029a}</Project>
       <Name>DotNet.Highcharts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\3rd\Postal.MVC5 fork\Source\Postal.AspNetCore\Postal.Mvc5.4.6.csproj">
-      <Project>{ca00867c-d9bc-42d9-b04a-bf1957324882}</Project>
-      <Name>Postal.Mvc5.4.6</Name>
     </ProjectReference>
     <ProjectReference Include="..\3rd\ZabbixApi\ZabbixApi.csproj">
       <Project>{2834dafd-eade-4076-9d80-0827e185efe1}</Project>
